--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="row">
 			<div class="small-12 columns">
 				<div class="panel">
-					<progress style="width: 100%">Loading...</progres>
+					<progress style="width: 100%">Loading...</progress>
 				</div>
 			</div>
 		</div>
