--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
-<html class="no-js" lang="en">
+<html manifest="manifest.appcache" class="no-js" lang="en">
 
 <head>
 	<meta charset="utf-8">
